--- a/满级，1小时终极套装 5分钟.html
+++ b/满级，1小时终极套装 5分钟.html
@@ -9,6 +9,7 @@
     .pp #show {top: 0px;left: px;}
      #validation.addbg,.validation-submit a.addbg,.val-pop-close.addbg { background-image: url(/flash_style/images/vali_sprite.png);  background-repeat:no-repeat;}
     </style>
+	<script>alert("123");</script>
     <script type="text/javascript">	
 var tc_domain="https://p.xiongdong.com/",tc_url="/flash/", hf_url="http://hf.519397.com/flash/", tj_url="https://tjpv.twh5.com/";
 var agent_id=parseInt("1839"), placeid=site_id=parseInt("19902"), popwin_flag=parseInt("2"), tj_reach_flag=parseInt("1"), url_blank_flag=parseInt("1"), adtype=parseInt("8"), adturn=parseInt("1"),beian="", wd_flag=0, http='https';
