--- a/满级，1小时终极套装 5分钟.html
+++ b/满级，1小时终极套装 5分钟.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0076)https://d.mytanwan.com/h/19902.html?cplaceid=84541669.3062116780.79575640352 -->
 <html style="width: 100%; height: 100%;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>装    5分钟满级，1小时终极套</title>
+    <title>贪玩疾风</title>
     <link rel="stylesheet" type="text/css" href="./满级，1小时终极套装 5分钟_files/style.css">
     <style type="text/css">
     .qp #show {top: 0px;margin-left: px;}
